@@ -16,7 +16,7 @@ A library offering spark user defined aggregation functions (udaf) on apache the
 <dependency>
     <groupId>io.github.jaihind213</groupId>
     <artifactId>spark-set-udaf</artifactId>
-    <version>spark3.5.2-scala2.13-1.0.0-jdk11</version>
+    <version>spark3.5.2-scala2.13-1.0.1-jdk11</version>
 </dependency>
 ```
 
@@ -24,6 +24,7 @@ A library offering spark user defined aggregation functions (udaf) on apache the
 
 Refer to the test cases for examples of how to use the library.
 
+### Java
 ```java
         SetAggregator setAggregator = new SetAggregator();
         spark.udf().register("set_sketch", functions.udaf(setAggregator, Encoders.STRING()));
@@ -45,4 +46,30 @@ Refer to the test cases for examples of how to use the library.
         "  SELECT set_sketch(city) AS sets FROM city2\n" +
         ") sub;";
         ataset<Row> unionEstimateDf = spark.sql(sql);
+```
+
+
+### Python
+```python
+    spark = (
+            SparkSession.builder.appName("app")
+            
+            .config("spark.jars", "path_to_fat_jar")
+            .config("spark.driver.extraClassPath", "path to spark-set-udaf-spark3.5.2-scala2.13-1.0.1-jar-with-dependencies.jar")
+            .config("spark.executor.extraClassPath", "path to spark-set-udaf-spark3.5.2-scala2.13-1.0.1-jar-with-dependencies.jar")
+            .config("spark.sql.session.timeZone", "GMT")
+            .config("spark.driver.extraJavaOptions", "-Duser.timezone=GMT  -Dfile.encoding=UTF-8 --illegal-access=permit --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED --add-exports java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-opens java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED --add-opens java.base/java.lang.invoke=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED -XX:+UseG1GC")
+            .config("spark.executor.extraJavaOptions", "-Duser.timezone=GMT  -Dfile.encoding=UTF-8 --illegal-access=permit --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED --add-exports java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-opens java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED --add-opens java.base/java.lang.invoke=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED -XX:+UseG1GC")
+            .getOrCreate()
+        )
+    # Register the UDFs
+    jvm = spark._jvm
+    jvm_spark = spark._jsparkSession
+    jvm.io.github.jaihind213.SetAggregator.register(jvm_spark, 4096, 9001)
+
+    # create df with random string data
+    df = spark.createDataFrame([("a",), ("b",), ("c",)], ["col1"])
+    df.createOrReplaceTempView("foo")
+    spark.sql("select estimate_set(set_sketch(col1)) as estimate_set from foo").show(truncate=False)
+
 ```
